# VibeCrack

./: .firebaserc  .gitignore  2026-02-06-melhorias-codex.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PLANO_DE_TESTES.md  README.md  SECURITY.md  build_log.txt  build_log_2.txt  build_log_3.txt  deploy_cloudrun.sh  firebase.json  pyproject.toml  test_scanners.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
engine/: cli.py  cli_output.py  config.py  requirements.txt
engine/docker/: Dockerfile.cloudrun  Dockerfile.engine  docker-compose.yml
engine/orchestrator/: cloudrun_handler.py  data_store.py  firebase_client.py  job_manager.py  main.py  run_saved_scan.py
engine/reporting/: ai_analyzer.py  html_report.py  pdf_generator.py
engine/scanners/: access_control_scanner.py  base_scanner.py  crawler.py  csrf_scanner.py  directory_scanner.py  endpoint_scanner.py  headers_scanner.py  oast_client.py  recon_scanner.py  remediation_templates.py  secrets_scanner.py  sqli_scanner.py  ssl_scanner.py  ssrf_scanner.py  subdomain_scanner.py  xss_browser_scanner.py  xss_scanner.py  zap_scanner.py
engine/scoring/: calculator.py
firebase/: firestore.indexes.json  firestore.rules
frontend/: package-lock.json
frontend/scripts/: flatten-rsc.mjs
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/hooks/: useAuth.ts  useProjects.ts  useScan.ts
frontend/src/lib/: firebase.ts  firestore.ts  scoring.ts
(+15 files in other folders)
